# digital_wallet_system

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  locustfile.py  main.py  pyproject.toml
history_service/: Dockerfile  manage.py  requirements.txt
history_service/history/: consumers.py  models.py  urls.py  views.py
history_service/history/management/commands/: consume_kafka.py  create_topic.py
history_service/history/migrations/: 0001_initial.py
history_service/history_service/: asgi.py  settings.py  urls.py  wsgi.py
wallet_service/: Dockerfile  manage.py  requirements.txt
wallet_service/wallet/: admin.py  filters.py  models.py  producers.py  serializers.py  tasks.py  urls.py  views.py
wallet_service/wallet/migrations/: 0001_initial.py
wallet_service/wallet_service/: asgi.py  settings.py  urls.py  wsgi.py
