[project]
name = "digital-wallet-transaction-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.1",
    "django>=5.2.6",
    "django-celery-beat>=2.8.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8",
    "redis>=7.0.1",
    "requests>=2.32.5",
]
